# torchamity

./: LICENSE  pyproject.toml
tests/: test_learner.py  test_metrics.py
torchamity/: learner.py
torchamity/metrics/: __init__.py  metrics.py
